<resources>
    <string name="app_name" translatable="false">Runnerz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="empty_run">Nothing to add</string>
    <string name="succes_add_run">Run saved</string>
    <string name="add_run">Add Running Session</string>
    <string name="update_run">Update Running Session</string>
    <string name="update_run_success">Running Session Updated!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_run_succes">Running Session Deleted!</string>
    <string name="delete">Delete</string>
    <string name="question_run_delete">Are you sure you want to Delete?</string>
    <string name="running_name">Place</string>
    <string name="running_duration">Duration</string>
    <string name="running_kms">Kms</string>
    <string name="running_data">Data</string>
    <string name="running_check">Please fill out all the fields below</string>
    <string name="fragment_list_run">Last Runs</string>
    <string name="fragment_add_run">Add Run</string>
    <string name="fragment_update_run">Change Run</string>
    <string name="signin">Sign In</string>
    <string name="session_expired">Session Expired</string>
    <string name="session_expired_message">Session has been expired. Please Sign In again!</string>
    <string name="error_something_went_wrong">Ups! Something went wrong. Please Try again!</string>
    <string name="login" translatable="false">Login</string>
    <string name="fill_user_password">Please fill the camps Username and Password!</string>
    <string name="welcome">Welcome!</string>
    <string name="runs">Runs</string>
    <string name="wrong_username_password">Ups! Username or Password doesn\'t check out. Please try again.</string>
    <string name="refresh" translatable="false">Refresh</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="delete_run">Delete Run</string>
    <string name="only_edit_runz">Ups! You can only update or delete</string>
</resources>