<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.update.UpdateFragment">

    <LinearLayout
        android:id="@+id/ll_main_layout_update_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/update_run"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/updateRunningName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_place_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/running_name"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

        <EditText
            android:id="@+id/updateRunningData"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_calendar_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/running_data"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

        <EditText
            android:id="@+id/updateRunningDuration"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_hourglass_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/running_duration"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

        <EditText
            android:id="@+id/updateRunningKms"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_walk_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/running_kms"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>