<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.pm.runnerz.fragments.list.ListFragment"
        android:label="@string/fragment_list_run"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_listFragment_to_add"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/action_listFragment_to_updateFragment"
            app:destination="@id/updateFragment" />
        <action
            android:id="@+id/action_listFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_listFragment_to_maps"
            app:destination="@id/maps" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.pm.runnerz.fragments.add.AddFragment"
        android:label="Add Runs"
        tools:layout="@layout/fragment_add">
        <action
            android:id="@+id/action_add_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.pm.runnerz.fragments.update.UpdateFragment"
        android:label="Change Run"
        tools:layout="@layout/fragment_update">
        <action
            android:id="@+id/action_updateFragment_to_listFragment"
            app:destination="@id/listFragment" />
        <argument
            android:name="currentRun"
            app:argType="com.pm.runnerz.data.entities.Running" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.pm.runnerz.fragments.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_runListFragment"
            app:destination="@id/runListFragment" />
        <action
            android:id="@+id/action_loginFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <fragment
        android:id="@+id/runListFragment"
        android:name="com.pm.runnerz.fragments.runz_list.RunListFragment"
        android:label="@string/runs"
        tools:layout="@layout/fragment_run_list">
        <action
            android:id="@+id/action_runListFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_runListFragment_to_addRunFragment"
            app:destination="@id/addRunFragment" />
        <action
            android:id="@+id/action_runListFragment_to_updateRunFragment"
            app:destination="@id/updateRunFragment" />
    </fragment>
    <fragment
        android:id="@+id/addRunFragment"
        android:name="com.pm.runnerz.fragments.runz.add.AddRunFragment"
        android:label="Add Run"
        tools:layout="@layout/fragment_add_run">
        <action
            android:id="@+id/action_addRunFragment_to_runListFragment"
            app:destination="@id/runListFragment" />
        <action
            android:id="@+id/action_addRunFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateRunFragment"
        android:name="com.pm.runnerz.fragments.update_run.UpdateRunFragment"
        android:label="Change Run"
        tools:layout="@layout/fragment_update_run">
        <action
            android:id="@+id/action_updateRunFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_updateRunFragment_to_runListFragment"
            app:destination="@id/runListFragment" />
        <argument
            android:name="currentRunAPI"
            app:argType="com.pm.runnerz.api_runnerz.models.Run" />
    </fragment>
    <activity
        android:id="@+id/maps"
        android:name="com.pm.runnerz.maps.Maps"
        android:label="Maps" />

</navigation>